--- a/index.html
+++ b/index.html
@@ -307,6 +307,67 @@ img{display:block;max-width:100%}
 #countdown-wrap{font-size:.7rem;color:var(--muted);letter-spacing:1px}
 #countdown{color:var(--cyan)}
 
+/* Credit link (reveal panel + review modal) */
+.credit-link{
+  font-size:.7rem;color:var(--muted);text-align:center;
+  letter-spacing:.5px;
+}
+.credit-link a{
+  color:var(--cyan);text-decoration:none;opacity:.7;
+  transition:opacity .2s;
+}
+.credit-link a:hover{opacity:1;text-decoration:underline}
+
+/* Clickable results pips */
+.r-pip{cursor:pointer;transition:transform .15s,box-shadow .15s}
+.r-pip:hover{transform:scale(1.2)}
+.r-pip.correct:hover{box-shadow:var(--glow-green)}
+.r-pip.wrong:hover{box-shadow:var(--glow-red)}
+
+/* Review Modal */
+#review-modal{
+  display:none;position:fixed;inset:0;z-index:300;
+  background:rgba(6,6,12,.88);backdrop-filter:blur(8px);
+  align-items:center;justify-content:center;
+  padding:16px;
+}
+#review-modal.active{display:flex}
+#review-card{
+  background:var(--surface);border:1px solid var(--border);
+  max-width:520px;width:100%;padding:20px;
+  position:relative;
+  animation:fadeUp .25s ease-out;
+}
+#review-close{
+  position:absolute;top:10px;right:14px;
+  font-size:1.4rem;color:var(--muted);background:none;border:none;
+  cursor:pointer;line-height:1;transition:color .2s;
+}
+#review-close:hover{color:var(--cyan)}
+#review-round-label{
+  font-family:var(--font-display);font-size:.7rem;
+  color:var(--muted);letter-spacing:2px;margin-bottom:12px;
+}
+#review-card img{
+  width:100%;aspect-ratio:4/3;object-fit:cover;
+  border:1px solid var(--border);margin-bottom:12px;
+}
+#review-verdict{
+  font-family:var(--font-display);font-size:.9rem;
+  font-weight:700;letter-spacing:2px;
+  padding:10px;text-align:center;margin-bottom:10px;
+  border:1px solid var(--border);
+}
+#review-verdict.correct{color:var(--green);border-color:var(--green);background:rgba(0,255,157,.05)}
+#review-verdict.wrong{color:var(--red);border-color:var(--red);background:rgba(255,0,60,.05)}
+#review-attribution{font-size:.78rem;color:var(--muted);text-align:center;margin-bottom:8px}
+#review-tip{
+  font-size:.82rem;line-height:1.5;padding:10px 12px;
+  border-left:2px solid var(--cyan);background:rgba(0,229,255,.04);
+  margin-bottom:10px;
+}
+#review-tip strong{color:var(--cyan);font-weight:400}
+
 /* Toast */
 #toast{
   position:fixed;bottom:24px;left:50%;transform:translateX(-50%) translateY(20px);
@@ -374,6 +435,7 @@ img{display:block;max-width:100%}
     <div id="reveal-verdict"></div>
     <div id="reveal-source"></div>
     <div id="reveal-tip"></div>
+    <div id="reveal-credit"></div>
     <div id="global-bar-wrap">
       <span>GLOBAL ACCURACY</span>
       <div id="global-bar"><div id="global-bar-fill"></div></div>
@@ -408,6 +470,19 @@ img{display:block;max-width:100%}
 <!-- Toast -->
 <div id="toast"></div>
 
+<!-- Review Modal (results screen pip tap) -->
+<div id="review-modal" onclick="closeReview(event)">
+  <div id="review-card">
+    <button id="review-close" onclick="closeReview()">&times;</button>
+    <div id="review-round-label"></div>
+    <img id="review-img" src="" alt="Round image">
+    <div id="review-verdict"></div>
+    <div id="review-attribution"></div>
+    <div id="review-tip"></div>
+    <div id="review-credit"></div>
+  </div>
+</div>
+
 <script>
 /* ══════════════════════════════════════
    CONFIG
@@ -433,67 +508,87 @@ const FALLBACK = {
   day_number: 0,
   date: 'offline',
   category: 'Image Detection',
-  category_emoji: '🔍',
+  category_emoji: '👁️',
   rounds: [
     {
-      id:'f1',type:'image',source:'human',
-      content:'https://images.unsplash.com/photo-1506744038136-46273834b3fb?w=800&q=80',
-      attribution:'Real photograph — Yosemite Valley landscape',
-      pro_tip:'ATMOSPHERIC DEPTH: Real landscapes show natural haze and color shifts in the distance. AI often renders backgrounds too sharply or with artificial blur.'
+      id:'d1r01',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1535905557558-afc4877a26fc?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — urban cityscape at night',
+      pro_tip:'LIGHT BLEED: Real neon and city lights create natural lens flare, chromatic aberration, and uneven glow. AI tends to render light sources as clean, uniform halos without the messy physics of real optics.',
+      credit_name:'Susan Yin',
+      source_url:'https://unsplash.com/photos/2JIvboGLeho'
     },
     {
-      id:'f2',type:'image',source:'ai',
-      content:'https://images.unsplash.com/photo-1677442136019-21780ecad995?w=800&q=80',
-      attribution:'AI-generated — digital artwork',
-      pro_tip:'UNCANNY SYMMETRY: AI tends to create suspiciously balanced compositions. Real photos have natural asymmetry — objects slightly off-center, uneven lighting.'
+      id:'d1r02',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1485827404703-89b55fcc595e?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — humanoid robot in studio',
+      pro_tip:'MECHANICAL JOINTS: Real robots have visible seams, screws, and manufacturing marks. AI-generated robots often have impossibly smooth transitions between parts and joints that couldn\'t physically articulate.',
+      credit_name:'Alex Knight',
+      source_url:'https://unsplash.com/photos/2EJCSULRwC8'
     },
     {
-      id:'f3',type:'image',source:'human',
-      content:'https://images.unsplash.com/photo-1517423440428-a5a00ad493e8?w=800&q=80',
-      attribution:'Real photograph — dog portrait',
-      pro_tip:'FUR DETAIL: Real animal fur has irregular patterns and individual hairs catching light differently. AI fur often looks too uniform or creates impossible light reflections.'
+      id:'d1r03',type:'image',source:'ai',
+      content:'https://images.unsplash.com/photo-1677442136019-21780ecad995?auto=format&fit=crop&w=800&q=80',
+      attribution:'AI-generated — digital artwork created with Midjourney',
+      pro_tip:'UNCANNY PERFECTION: This image has a \'too polished\' quality. Real photos always have sensor noise, subtle motion blur, and optical imperfections. AI images are suspiciously pristine across the entire frame.',
+      credit_name:'Midjourney via Unsplash',
+      source_url:'https://unsplash.com/photos/U1gvhqVQ2kQ'
     },
     {
-      id:'f4',type:'image',source:'ai',
-      content:'https://images.unsplash.com/photo-1686191128892-3b37add4c844?w=800&q=80',
-      attribution:'AI-generated — surreal scene',
-      pro_tip:'PHYSICS CHECK: Look for impossible reflections, shadows going the wrong direction, or objects floating without support. AI struggles with physical consistency.'
+      id:'d1r04',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1512621776951-a57141f2eefd?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — food styling and fresh vegetables',
+      pro_tip:'ORGANIC CHAOS: Real food has natural imperfections — a leaf slightly wilted, sauce dripped asymmetrically, crumbs scattered randomly. AI food looks suspiciously art-directed with impossible uniformity.',
+      credit_name:'Anna Pelzer',
+      source_url:'https://unsplash.com/photos/IGfIGP5ONV0'
     },
     {
-      id:'f5',type:'image',source:'human',
-      content:'https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=800&q=80',
-      attribution:'Real photograph — food styling',
-      pro_tip:'ORGANIC CHAOS: Real food photos have natural imperfections — a crumb out of place, uneven sauce drips. AI food looks suspiciously perfect.'
+      id:'d1r05',type:'image',source:'ai',
+      content:'https://images.unsplash.com/photo-1686191128892-3b37add4c844?auto=format&fit=crop&w=800&q=80',
+      attribution:'AI-generated — surrealist composition',
+      pro_tip:'PHYSICS VIOLATIONS: Check shadows and reflections. AI frequently places light sources inconsistently — shadows may point in conflicting directions, and reflections don\'t match the objects casting them.',
+      credit_name:'AI Generator via Unsplash',
+      source_url:'https://unsplash.com/photos/jLwVAUtLOAQ'
     },
     {
-      id:'f6',type:'image',source:'ai',
-      content:'https://images.unsplash.com/photo-1696446701796-da61225697cc?w=800&q=80',
-      attribution:'AI-generated — portrait',
-      pro_tip:'EDGE ARTIFACTS: Zoom into where hair meets background, or where skin meets clothing. AI often creates subtle smearing, haloing, or impossible blending at these boundaries.'
+      id:'d1r06',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1592478411213-61535f94e0ca?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — rain-soaked neon street scene',
+      pro_tip:'WATER BEHAVIOR: Real rain on real surfaces creates complex, irregular reflections with natural distortion. AI renders water as either too perfect (mirror-like) or too uniform (repeated ripple patterns).',
+      credit_name:'Jezael Melgoza',
+      source_url:'https://unsplash.com/photos/layMbSJ3YOE'
     },
     {
-      id:'f7',type:'image',source:'human',
-      content:'https://images.unsplash.com/photo-1519608487953-e999c86e7455?w=800&q=80',
-      attribution:'Real photograph — nature close-up',
-      pro_tip:'TEXTURE CONSISTENCY: Real textures hold up at every zoom level. AI textures often dissolve into repetitive patterns or meaningless smudges when examined closely.'
+      id:'d1r07',type:'image',source:'ai',
+      content:'https://images.unsplash.com/photo-1696446701796-da61225697cc?auto=format&fit=crop&w=800&q=80',
+      attribution:'AI-generated — photorealistic portrait',
+      pro_tip:'BOUNDARY ARTIFACTS: Zoom into where hair meets background or skin meets fabric. AI creates subtle smearing, impossible blending, or haloing effects at these transition zones.',
+      credit_name:'AI Generator via Unsplash',
+      source_url:'https://unsplash.com/photos/portrait-ai-generated'
     },
     {
-      id:'f8',type:'image',source:'ai',
-      content:'https://images.unsplash.com/photo-1684487747720-1ba29cda82c8?w=800&q=80',
-      attribution:'AI-generated — architectural render',
-      pro_tip:'TEXT & SIGNAGE: Any text in the image is a dead giveaway. AI consistently mangles letters, producing nonsensical words or characters that almost-but-don\'t-quite look right.'
+      id:'d1r08',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1531297484001-80022131f5a1?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — laptop with screen glow in dark environment',
+      pro_tip:'SCREEN LIGHT: Real screens cast uneven light that falls off naturally with distance and bounces differently off varied surfaces. AI often renders screen glow as a uniform wash of color.',
+      credit_name:'Ales Nesetril',
+      source_url:'https://unsplash.com/photos/Im7lZjxeLhg'
     },
     {
-      id:'f9',type:'image',source:'human',
-      content:'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800&q=80',
-      attribution:'Real photograph — mountain vista',
-      pro_tip:'NOISE PATTERN: Real photos have consistent sensor noise across the entire image. AI images have unnaturally clean areas mixed with over-detailed zones.'
+      id:'d1r09',type:'image',source:'ai',
+      content:'https://images.unsplash.com/photo-1697577418970-95d99b5a55cf?auto=format&fit=crop&w=800&q=80',
+      attribution:'AI-generated — fantasy environment',
+      pro_tip:'REPETITION PATTERNS: Count similar elements — leaves, bricks, clouds. AI creates subtle copy-paste repetition that nature never produces. Real scenes have true randomness in every repeated element.',
+      credit_name:'AI Generator via Unsplash',
+      source_url:'https://unsplash.com/photos/fantasy-ai-landscape'
     },
     {
-      id:'f10',type:'image',source:'ai',
-      content:'https://images.unsplash.com/photo-1697577418970-95d99b5a55cf?w=800&q=80',
-      attribution:'AI-generated — fantasy landscape',
-      pro_tip:'REPETITIVE ELEMENTS: Count similar objects (leaves, bricks, windows). AI loves to create subtle copy-paste patterns. Nature never repeats this precisely.'
+      id:'d1r10',type:'image',source:'human',
+      content:'https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&fit=crop&w=800&q=80',
+      attribution:'Real photograph — retro tech and circuit boards',
+      pro_tip:'MANUFACTURING DETAIL: Real electronics have consistent trace widths, solder joints with natural irregularity, and dust/wear marks. AI circuit boards often have traces that lead nowhere and components that don\'t exist.',
+      credit_name:'Lorenzo Herrera',
+      source_url:'https://unsplash.com/photos/p0j-mE6mGo4'
     }
   ]
 };
@@ -547,16 +642,33 @@ async function boot() {
   const todayKey = getTodayKey();
   const played = localStorage.getItem('braiain_played_' + todayKey);
 
-  // Load daily data
+  // Load daily data: try challenges/YYYY-MM-DD.json → daily.json → FALLBACK
   status.textContent = '> LOADING DAILY CHALLENGE...';
+  const todayFile = 'challenges/' + todayKey + '.json';
+  let loaded = false;
+
+  // Try date-specific challenge first
   try {
-    const resp = await fetchWithTimeout('daily.json', {}, 5000);
+    status.textContent = '> SCANNING ' + todayFile.toUpperCase() + '...';
+    const resp = await fetchWithTimeout(todayFile, {}, 5000);
     if (!resp.ok) throw new Error('HTTP ' + resp.status);
     dailyData = await resp.json();
     status.textContent = '> DAY ' + dailyData.day_number + ' — ' + (dailyData.category || 'DETECTION').toUpperCase() + ' LOADED';
+    loaded = true;
   } catch (e) {
-    dailyData = FALLBACK;
-    status.textContent = '> OFFLINE MODE — USING CACHED DATA';
+    // Date file not found — try generic daily.json
+    try {
+      status.textContent = '> DATE FILE MISSING — TRYING DAILY.JSON...';
+      const resp2 = await fetchWithTimeout('daily.json', {}, 5000);
+      if (!resp2.ok) throw new Error('HTTP ' + resp2.status);
+      dailyData = await resp2.json();
+      status.textContent = '> DAY ' + dailyData.day_number + ' — ' + (dailyData.category || 'DETECTION').toUpperCase() + ' LOADED';
+      loaded = true;
+    } catch (e2) {
+      // Both failed — use hardcoded fallback
+      dailyData = FALLBACK;
+      status.textContent = '> OFFLINE MODE — USING CACHED DATA';
+    }
   }
 
   await sleep(400);
@@ -630,6 +742,13 @@ function loadRound() {
   };
   img.src = round.content;
 
+  // Preload next round's image
+  const nextIdx = currentRound + 1;
+  if (nextIdx < TOTAL_ROUNDS && nextIdx < dailyData.rounds.length) {
+    const preload = new Image();
+    preload.src = dailyData.rounds[nextIdx].content;
+  }
+
   // Update prompt
   scrambleText(document.getElementById('prompt'), 'CLASSIFY: HUMAN OR AI-GENERATED?', 300);
   updateHUD();
@@ -637,6 +756,9 @@ function loadRound() {
 
 function choose(answer) {
   if (!gameActive) return;
+
+  // Haptic feedback
+  if (navigator.vibrate) navigator.vibrate(10);
 
   const round = dailyData.rounds[currentRound];
   const isCorrect = answer === round.source;
@@ -680,6 +802,18 @@ function showReveal(round, isCorrect) {
 
   source.textContent = round.attribution || '';
   tip.innerHTML = '<strong>PRO TIP:</strong> ' + (round.pro_tip || '');
+
+  // Credit link
+  const credit = document.getElementById('reveal-credit');
+  if (round.credit_name && round.source_url) {
+    credit.className = 'credit-link';
+    credit.innerHTML = '🔗 Source: <a href="' + round.source_url + '" target="_blank" rel="noopener">' + round.credit_name + '</a>';
+  } else if (round.credit_name) {
+    credit.className = 'credit-link';
+    credit.textContent = '🔗 Source: ' + round.credit_name;
+  } else {
+    credit.textContent = '';
+  }
 
   // Fetch global accuracy
   fetchGlobalAccuracy(round.id);
@@ -748,17 +882,60 @@ function showResults() {
   document.getElementById('results-streak').textContent =
     streak > 0 ? '🔥 ' + streak + '-day streak | Best: ' + bestStreak : 'Best streak: ' + bestStreak;
 
-  // Pip grid
+  // Pip grid — clickable for review
   const grid = document.getElementById('results-grid');
   grid.innerHTML = '';
-  results.forEach(c => {
+  results.forEach((c, i) => {
     const pip = document.createElement('div');
     pip.className = 'r-pip ' + (c ? 'correct' : 'wrong');
     pip.textContent = c ? '✓' : '✗';
+    pip.onclick = () => openReview(i);
     grid.appendChild(pip);
   });
 
   startCountdown();
+}
+
+/* ══════════════════════════════════════
+   REVIEW MODAL (tap pip on results screen)
+   ══════════════════════════════════════ */
+function openReview(index) {
+  const round = dailyData.rounds[index];
+  if (!round) return;
+
+  const isCorrect = results[index];
+  const modal = document.getElementById('review-modal');
+
+  document.getElementById('review-round-label').textContent = 'ROUND ' + (index + 1) + ' OF ' + TOTAL_ROUNDS;
+  document.getElementById('review-img').src = round.content;
+
+  const verdict = document.getElementById('review-verdict');
+  verdict.className = isCorrect ? 'correct' : 'wrong';
+  verdict.textContent = isCorrect
+    ? '✓ CORRECT — ' + round.source.toUpperCase()
+    : '✗ WRONG — IT WAS ' + round.source.toUpperCase();
+
+  document.getElementById('review-attribution').textContent = round.attribution || '';
+  document.getElementById('review-tip').innerHTML = '<strong>PRO TIP:</strong> ' + (round.pro_tip || '');
+
+  // Credit link
+  const credit = document.getElementById('review-credit');
+  if (round.credit_name && round.source_url) {
+    credit.className = 'credit-link';
+    credit.innerHTML = '🔗 Source: <a href="' + round.source_url + '" target="_blank" rel="noopener">' + round.credit_name + '</a>';
+  } else if (round.credit_name) {
+    credit.className = 'credit-link';
+    credit.textContent = '🔗 Source: ' + round.credit_name;
+  } else {
+    credit.textContent = '';
+  }
+
+  modal.classList.add('active');
+}
+
+function closeReview(e) {
+  if (e && e.target !== document.getElementById('review-modal') && e.target !== document.getElementById('review-close')) return;
+  document.getElementById('review-modal').classList.remove('active');
 }
 
 /* ══════════════════════════════════════
@@ -985,6 +1162,33 @@ function showToast(msg) {
   t.classList.add('show');
   setTimeout(() => t.classList.remove('show'), 2000);
 }
+
+/* ══════════════════════════════════════
+   KEYBOARD SHORTCUTS (Desktop)
+   ══════════════════════════════════════ */
+document.addEventListener('keydown', e => {
+  // Game screen: Left = Human, Right = AI
+  if (gameActive && document.getElementById('screen-game').classList.contains('active')) {
+    const revealActive = document.getElementById('reveal-panel').classList.contains('active');
+    if (!revealActive) {
+      if (e.key === 'ArrowLeft' || e.key === 'h' || e.key === 'H') { e.preventDefault(); choose('human'); }
+      if (e.key === 'ArrowRight' || e.key === 'a' || e.key === 'A') { e.preventDefault(); choose('ai'); }
+    } else {
+      // Reveal visible: Enter/Space/Right = Next
+      if (e.key === 'Enter' || e.key === ' ' || e.key === 'ArrowRight') { e.preventDefault(); nextRound(); }
+    }
+  }
+  // Review modal: Escape to close
+  if (e.key === 'Escape') {
+    const modal = document.getElementById('review-modal');
+    if (modal.classList.contains('active')) { e.preventDefault(); modal.classList.remove('active'); }
+  }
+  // Boot screen: Enter to start
+  if (e.key === 'Enter' && document.getElementById('screen-boot').classList.contains('active')) {
+    const btn = document.getElementById('btn-start');
+    if (btn && btn.style.display !== 'none') { e.preventDefault(); startGame(); }
+  }
+});
 
 /* ══════════════════════════════════════
    BOOT
