--- a/404.html
+++ b/404.html
@@ -422,33 +422,40 @@ img{display:block;max-width:100%}
    TIP TERMINAL (FOOTER)
    ══════════════════════════════════════ */
 .tip-terminal{
-  text-align:center;padding:18px 12px 16px;
-  border-top:1px solid var(--border);margin-top:auto;
+  text-align:center;padding:24px 16px 20px;
+  border-top:1px solid rgba(0,229,255,.15);margin-top:auto;
 }
 .tip-terminal .tip-label{
-  font-family:var(--font-display);font-size:.45rem;
-  letter-spacing:2.5px;color:var(--muted);margin-bottom:8px;
+  font-family:var(--font-display);font-size:.55rem;
+  letter-spacing:3px;color:var(--cyan);margin-bottom:10px;opacity:.7;
 }
-.tip-keys{display:flex;gap:8px;justify-content:center;margin-bottom:6px}
+.tip-keys{display:flex;gap:10px;justify-content:center;margin-bottom:8px}
 .tip-key{
-  padding:6px 16px;font-family:var(--font-mono);font-size:.6rem;
+  padding:8px 20px;font-family:var(--font-mono);font-size:.65rem;
   letter-spacing:1px;font-weight:700;
-  border:1px solid var(--border);background:var(--surface);
-  color:var(--muted);opacity:.6;
+  border:1px solid rgba(0,229,255,.25);background:rgba(0,229,255,.05);
+  color:var(--cyan);opacity:.8;
   transition:all .25s;cursor:pointer;
 }
-.tip-key:hover{opacity:1;border-color:var(--cyan);color:var(--cyan);box-shadow:var(--glow-cyan)}
+.tip-key:hover{opacity:1;border-color:var(--cyan);box-shadow:var(--glow-cyan)}
 .tip-key:active{transform:scale(.95)}
 .tip-key.copied{opacity:1;color:var(--green);border-color:var(--green)}
 .tip-hint{
-  font-family:var(--font-mono);font-size:.42rem;
+  font-family:var(--font-mono);font-size:.48rem;
   color:var(--muted);letter-spacing:1.5px;text-align:center;
-  opacity:.4;margin-bottom:6px;
+  opacity:.6;margin-bottom:8px;
 }
 .tip-footer-note{
-  font-size:.42rem;color:var(--muted);letter-spacing:1px;
-  margin-top:8px;opacity:.35;
+  font-size:.45rem;color:var(--muted);letter-spacing:1px;
+  margin-top:10px;opacity:.5;
 }
+.tip-footer-credit{
+  font-size:.38rem;color:var(--bg);letter-spacing:.5px;
+  margin-top:6px;opacity:.15;transition:opacity .4s;
+}
+.tip-footer-credit:hover{opacity:.5}
+.tip-footer-credit a{color:inherit;text-decoration:none}
+.tip-footer-credit a:hover{color:var(--cyan);opacity:1}
 </style>
 </head>
 <body>
@@ -1274,6 +1281,7 @@ boot();
   </div>
   <div class="tip-hint">TAP TO COPY WALLET ADDRESS</div>
   <div class="tip-footer-note">BRAIAIN &copy; 2026 — SYSTEM SECURE. NO PERSONAL DATA ARCHIVED.</div>
+  <div class="tip-footer-credit">A <a href="mailto:dnilgis@gmail.com">dnilgis</a> Project</div>
 </div>
 
 <script>
