--- a/index.html
+++ b/index.html
@@ -417,41 +417,48 @@ img{display:block;max-width:100%}
    TIP TERMINAL (FOOTER)
    ══════════════════════════════════════ */
 .tip-terminal{
-  text-align:center;padding:18px 12px 16px;
-  border-top:1px solid var(--border);margin-top:auto;
+  text-align:center;padding:24px 16px 20px;
+  border-top:1px solid rgba(0,229,255,.15);margin-top:auto;
   display:none;
 }
 .tip-terminal.visible{display:block}
 .tip-terminal .tip-label{
-  font-family:var(--font-display);font-size:.45rem;
-  letter-spacing:2.5px;color:var(--muted);margin-bottom:8px;
+  font-family:var(--font-display);font-size:.55rem;
+  letter-spacing:3px;color:var(--cyan);margin-bottom:10px;opacity:.7;
 }
-.tip-keys{display:flex;gap:8px;justify-content:center;margin-bottom:6px}
+.tip-keys{display:flex;gap:10px;justify-content:center;margin-bottom:8px}
 .tip-key{
-  padding:6px 16px;font-family:var(--font-mono);font-size:.6rem;
+  padding:8px 20px;font-family:var(--font-mono);font-size:.65rem;
   letter-spacing:1px;font-weight:700;
-  border:1px solid var(--border);background:var(--surface);
-  color:var(--muted);opacity:.6;
+  border:1px solid rgba(0,229,255,.25);background:rgba(0,229,255,.05);
+  color:var(--cyan);opacity:.8;
   transition:all .25s;cursor:pointer;
 }
-.tip-key:hover{opacity:1;border-color:var(--cyan);color:var(--cyan);box-shadow:var(--glow-cyan)}
+.tip-key:hover{opacity:1;border-color:var(--cyan);box-shadow:var(--glow-cyan)}
 .tip-key:active{transform:scale(.95)}
 .tip-key.copied{opacity:1;color:var(--green);border-color:var(--green)}
 .tip-hint{
-  font-family:var(--font-mono);font-size:.42rem;
+  font-family:var(--font-mono);font-size:.48rem;
   color:var(--muted);letter-spacing:1.5px;text-align:center;
-  opacity:.4;margin-bottom:6px;
+  opacity:.6;margin-bottom:8px;
 }
 .tip-footer-note{
-  font-size:.42rem;color:var(--muted);letter-spacing:1px;
-  margin-top:8px;opacity:.35;
+  font-size:.45rem;color:var(--muted);letter-spacing:1px;
+  margin-top:10px;opacity:.5;
 }
+.tip-footer-credit{
+  font-size:.38rem;color:var(--bg);letter-spacing:.5px;
+  margin-top:6px;opacity:.15;transition:opacity .4s;
+}
+.tip-footer-credit:hover{opacity:.5}
+.tip-footer-credit a{color:inherit;text-decoration:none}
+.tip-footer-credit a:hover{color:var(--cyan);opacity:1}
 /* ══════════════════════════════════════
    TODAY'S REVIEW
    ══════════════════════════════════════ */
 #review-section{
   display:none;max-width:640px;margin:0 auto;
-  padding:32px 16px 0;
+  padding:32px 16px 40px;
 }
 #review-section.visible{display:block}
 .yd-header{
@@ -478,10 +485,23 @@ img{display:block;max-width:100%}
   overflow:hidden;transition:border-color .25s;
 }
 .yd-card:hover{border-color:rgba(0,229,255,.3)}
+.yd-card-img-wrap{position:relative;overflow:hidden}
 .yd-card-img{
   width:100%;aspect-ratio:4/3;object-fit:cover;
   display:block;filter:brightness(.85);
 }
+.yd-stat-badge{
+  position:absolute;top:0;right:0;
+  padding:5px 8px;
+  font-family:var(--font-mono);font-size:.65rem;font-weight:700;
+  letter-spacing:.5px;
+  background:rgba(5,10,14,.85);
+  border-left:1px solid var(--border);border-bottom:1px solid var(--border);
+}
+.yd-stat-badge.high{color:var(--green);border-color:rgba(0,255,157,.3)}
+.yd-stat-badge.mid{color:var(--cyan);border-color:rgba(0,229,255,.3)}
+.yd-stat-badge.low{color:var(--red);border-color:rgba(255,0,60,.3)}
+.yd-stat-badge.none{color:var(--muted)}
 .yd-card-body{padding:8px 10px}
 .yd-card-row{
   display:flex;align-items:center;justify-content:space-between;
@@ -501,17 +521,15 @@ img{display:block;max-width:100%}
   font-size:.55rem;color:var(--muted);
   margin-top:3px;line-height:1.3;
 }
-.yd-bar-wrap{
-  margin-top:6px;display:flex;align-items:center;gap:6px;
+.yd-card-source{
+  margin-top:4px;
 }
-.yd-bar{
-  flex:1;height:4px;background:var(--border);overflow:hidden;
-}
-.yd-bar-fill{height:100%;background:var(--green);transition:width .8s ease-out}
-.yd-bar-label{
+.yd-card-source a{
   font-family:var(--font-mono);font-size:.45rem;
-  color:var(--muted);min-width:45px;text-align:right;letter-spacing:.5px;
+  color:var(--cyan);opacity:.5;text-decoration:none;letter-spacing:.5px;
 }
+.yd-card-source a:hover{opacity:.9;text-decoration:underline}
+
 </style>
 </head>
 <body>
@@ -534,6 +552,7 @@ img{display:block;max-width:100%}
   <div id="boot-stats">
     <div class="bstat"><span class="bstat-num" id="bs-played">0</span><span class="bstat-label">DAYS PLAYED</span></div>
     <div class="bstat"><span class="bstat-num" id="bs-avg">—</span><span class="bstat-label">AVG SCORE</span></div>
+    <div class="bstat"><span class="bstat-num" id="bs-yesterday">—</span><span class="bstat-label">YESTERDAY</span></div>
     <div class="bstat"><span class="bstat-num" id="bs-best">0</span><span class="bstat-label">BEST STREAK</span></div>
   </div>
   <div id="boot-status"></div>
@@ -614,6 +633,7 @@ img{display:block;max-width:100%}
   </div>
   <div class="tip-hint">TAP TO COPY WALLET ADDRESS</div>
   <div class="tip-footer-note">BRAIAIN &copy; 2026 — SYSTEM SECURE. NO PERSONAL DATA ARCHIVED.</div>
+  <div class="tip-footer-credit">A <a href="mailto:dnilgis@gmail.com">dnilgis</a> Project</div>
 </div>
 
 <script>
@@ -1258,18 +1278,23 @@ function loadTodayReview() {
     const pipClass = userCorrect ? 'correct' : 'wrong';
     const pipText = userCorrect ? '✓' : '✗';
 
+    // Source link (only for real photos)
+    const sourceLink = isHuman
+      ? '<div class="yd-card-source"><a href="' + r.content + '" target="_blank" rel="noopener">[ VIEW SOURCE ↗ ]</a></div>'
+      : '';
+
     card.innerHTML =
-      '<img class="yd-card-img" src="' + r.content + '" alt="Round ' + (i + 1) + '" loading="lazy" onerror="this.style.display=\'none\'">' +
+      '<div class="yd-card-img-wrap">' +
+        '<img class="yd-card-img" src="' + r.content + '" alt="Round ' + (i + 1) + '" loading="lazy" onerror="this.style.display=\'none\'">' +
+        '<div class="yd-stat-badge none" id="rv-badge-' + i + '">—</div>' +
+      '</div>' +
       '<div class="yd-card-body">' +
         '<div class="yd-card-row">' +
           '<span class="yd-card-label ' + labelClass + '">' + labelText + '</span>' +
           '<span class="yd-card-round"><span class="r-pip ' + pipClass + '" style="width:20px;height:20px;font-size:.55rem;display:inline-flex">' + pipText + '</span> R' + (i + 1) + '</span>' +
         '</div>' +
         '<div class="yd-card-attrib">' + (r.attribution || '') + '</div>' +
-        '<div class="yd-bar-wrap">' +
-          '<div class="yd-bar"><div class="yd-bar-fill" id="rv-bar-' + i + '"></div></div>' +
-          '<span class="yd-bar-label" id="rv-stat-' + i + '">—</span>' +
-        '</div>' +
+        sourceLink +
       '</div>';
 
     grid.appendChild(card);
@@ -1282,23 +1307,21 @@ function loadTodayReview() {
 }
 
 async function fetchReviewStat(roundId, index) {
+  const badge = document.getElementById('rv-badge-' + index);
   try {
     const resp = await fetchWithTimeout(API_BASE + '/stats?id=' + roundId, {}, 4000);
     if (!resp.ok) throw new Error('no stats');
     const data = await resp.json();
     const pct = Math.round(data.pct || 0);
-    const bar = document.getElementById('rv-bar-' + index);
-    const label = document.getElementById('rv-stat-' + index);
-    if (bar) {
-      setTimeout(() => { bar.style.width = pct + '%'; }, 100 + index * 80);
-      if (pct >= 70) bar.style.background = 'var(--green)';
-      else if (pct >= 40) bar.style.background = 'var(--cyan)';
-      else bar.style.background = 'var(--red)';
+    if (badge) {
+      badge.textContent = pct + '%';
+      badge.className = 'yd-stat-badge ' + (pct >= 70 ? 'high' : pct >= 40 ? 'mid' : 'low');
     }
-    if (label) label.textContent = pct + '% correct';
   } catch (e) {
-    const label = document.getElementById('rv-stat-' + index);
-    if (label) label.textContent = 'NO DATA';
+    if (badge) {
+      badge.textContent = '—';
+      badge.className = 'yd-stat-badge none';
+    }
   }
 }
 
@@ -1306,7 +1329,6 @@ async function fetchReviewStat(roundId, index) {
    BOOT SCREEN STATS
    ══════════════════════════════════════ */
 function loadBootStats() {
-  // Count days played and calculate avg score from localStorage
   let daysPlayed = 0;
   let totalScore = 0;
 
@@ -1325,7 +1347,19 @@ function loadBootStats() {
 
   const bestStrk = parseInt(localStorage.getItem('braiain_best_streak') || '0');
 
-  // Only show if player has history
+  // Yesterday's score
+  const ydKey = getYesterdayKey();
+  const ydEl = document.getElementById('bs-yesterday');
+  try {
+    const ydResults = JSON.parse(localStorage.getItem('braiain_results_' + ydKey));
+    if (Array.isArray(ydResults) && ydResults.length > 0) {
+      const ydScore = ydResults.filter(Boolean).length;
+      ydEl.textContent = ydScore + '/10';
+      if (ydScore >= 8) ydEl.style.color = 'var(--green)';
+      else if (ydScore <= 3) ydEl.style.color = 'var(--red)';
+    }
+  } catch (e) {}
+
   if (daysPlayed > 0) {
     const avg = Math.round((totalScore / daysPlayed) * 10) / 10;
     document.getElementById('bs-played').textContent = daysPlayed;
