--- a/404.html
+++ b/404.html
@@ -246,12 +246,12 @@ body::after{
 <div class="footer-row" id="page-footer">
   <span>&copy; 2026 BRAIAIN</span>
   <span class="sep">&middot;</span>
-  <a href="mailto:dnilgis@gmail.com">a dnilgis project</a>
+  <a href="/cdn-cgi/l/email-protection#fe9a90979299978dbe99939f9792d09d9193">a dnilgis project</a>
   <span class="sep">&middot;</span>
   <span>no data collected</span>
 </div>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 (function(){
 'use strict';
 
@@ -738,10 +738,4 @@ document.addEventListener('mouseleave', function(){ touchTarget = null; });
    ══════════════════════════════════════ */
 document.getElementById('btn-start').addEventListener('click', startGame);
 document.getElementById('btn-retry').addEventListener('click', startGame);
-document.getElementById('btn-home').addEventListener('click', function(){ window.location.href = '/'; });
-document.getElementById('btn-home2').addEventListener('click', function(){ window.location.href = '/'; });
-
-})();
-</script>
-</body>
-</html>
+document.getElementById('btn-home').addEventListener('click', function(){ window.location.href = '
